--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Web Development — Slabbion Builds the Future</title>
-    <meta name="description" content="Professional web development services by Slabbion. We build modern, responsive, and scalable websites tailored to your brand and mission." />
+
+    <meta name="description" content="Slabbion designs and develops cutting-edge, responsive, and lightning-fast websites. We tailor every build to your brand, mission, and future growth." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Web Development — Slabbion Builds the Future" />
+    <meta property="og:description" content="Custom-built websites by Slabbion — fast, mobile-optimized, and beautifully branded for tomorrow." />
+    <meta property="og:url" content="https://slabbion.github.io/Slabbion/webdevelopment.html" />
+    <meta property="og:image" content="https://slabbion.github.io/Slabbion/images/Slabbion_Logo_2500x500px.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Web Development — Slabbion Builds the Future" />
+    <meta name="twitter:description" content="Tailored web experiences by Slabbion — responsive, scalable, and designed for tomorrow's digital landscape." />
+    <meta name="twitter:image" content="https://slabbion.github.io/Slabbion/images/Slabbion_Logo_2500x500px.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://slabbion.github.io/Slabbion/webdevelopment.html" />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
@@ -26,27 +44,44 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon32x32.png" />
 
-    <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ProfessionalService",
-      "name": "Slabbion Web Development",
-      "description": "Slabbion builds custom, high-performance websites that are fully responsive and future-ready.",
-      "areaServed": {
-        "@type": "Place",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Johannesburg",
-          "addressRegion": "Gauteng",
-          "addressCountry": "South Africa"
-        }
-      },
-      "telephone": "+27 ",
-      "url": "https://slabbion.com/webdevelopment.html"
-    }
-    </script>
-</head>
+<!-- Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Slabbion Web Development",
+  "image": "https://slabbion.github.io/Slabbion/images/Slabbion_Logo_2500x500px.png",
+  "description": "Slabbion creates tailored, high-performance websites with responsive design, modern aesthetics, and scalable functionality. Ideal for businesses, creators, and innovators.",
+  "url": "https://slabbion.github.io/Slabbion/webdevelopment.html",
+  "telephone": "+27 ",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Virtual HQ - Online Only",
+    "addressLocality": "",
+    "addressRegion": "Gauteng",
+    "addressCountry": "ZA"
+  },
+  "areaServed": {
+    "@type": "Country",
+    "name": "South Africa"
+  },
+  "founder": {
+    "@type": "Person",
+    "name": "Niël Slabbert",
+    "jobTitle": "Lead Developer & Visionary"
+  },
+  "brand": {
+    "@type": "Brand",
+    "name": "Slabbion"
+  },
+  "sameAs": [
+    "https://www.linkedin.com/in/slabbion",
+    "https://www.instagram.com/slabbion",
+    "https://github.com/slabbion"
+  ]
+}
+</script>
+
 
 
 <body>
@@ -417,59 +452,89 @@
 
 
 
-   <!-- Web Development Section -->
+    <!-- Web Development Section -->
     <section class="py-5" id="web-development">
         <div class="container">
             <div class="text-center mb-5">
             <h2 class="section-title glow-blue">Web Development</h2>
             <p class="lead">
-                We craft custom-coded websites for <strong>every industry imaginable</strong> Whether you’re a startup, an artist, or a global enterprise, we build platforms that convert, scale, and look stunning.
+                We don’t just build websites — we craft <strong>digital systems</strong> that power your brand and mission.<br>
+                From pixel-perfect landing pages to intelligent enterprise dashboards, we architect future-ready platforms tailored to you.
             </p>
             </div>
 
             <div class="feature-box h-100 p-4 border rounded shadow-sm bg-dark text-white hover-glow">
-                <ul class="list-unstyled check-list mb-3">
-                    <li>✅ Responsive Websites (Mobile-First)</li>
-                    <li>✅ eCommerce Stores</li>
-                    <li>✅ Portfolios, Blogs & Landing Pages</li>
-                    <li>✅ Business, Medical, Real Estate & Legal Sites</li>
-                    <li>✅ SEO-Optimized Development</li>
-                    <li>✅ Performance Optimization</li>
-                    <li>✅ Ongoing Support & Maintenance</li>
-                    <li>✅ Website Redesigns & Migrations</li>
-                    <li>✅ Cross-Browser Compatibility</li>
-                    <li>✅ Security Best Practices</li>
+            <h5 class="text-info mb-3">What We Build:</h5>
+            <ul class="list-unstyled check-list mb-3">
+                <li>✅ Responsive Websites (Mobile-First)</li>
+                <li>✅ E-Commerce Stores (Shopify, WooCommerce, Custom)</li>
+                <li>✅ Portfolios, Blogs & Landing Pages</li>
+                <li>✅ SaaS Dashboards, Portals & Internal Systems</li>
+                <li>✅ SEO-Optimized Development</li>
+                <li>✅ Speed, Accessibility & Core Web Vitals</li>
+                <li>✅ Website Redesigns & Migrations</li>
+                <li>✅ Cross-Browser Compatibility</li>
+                <li>✅ Web App Integration (API, CRM, Forms)</li>
+                <li>✅ Ongoing Support & Maintenance</li>
+            </ul>
+
+            <h5 class="text-info mb-3">Website Types We Offer:</h5>
+            <ul class="list-unstyled small mb-4" style="columns: 2;">
+                <li>• Static Websites (HTML/CSS)</li>
+                <li>• Dynamic Websites (CMS/Backend)</li>
+                <li>• CMS Platforms (WordPress, Ghost)</li>
+                <li>• E-Commerce (Shopify, WooCommerce)</li>
+                <li>• Web Applications (React, Vue, Laravel)</li>
+                <li>• Progressive Web Apps (PWAs)</li>
+                <li>• Client Portals & Dashboards</li>
+                <li>• SaaS & Enterprise Systems</li>
+            </ul>
+
+            <div style="max-height: 140px; overflow-y: auto; border-top: 1px solid #444; padding-top: 10px;">
+                <p class="mb-1"><strong>Industries We Serve:</strong></p>
+                <ul class="list-unstyled small mb-0" style="columns: 2;">
+                    <li>• Construction Companies</li>
+                    <li>• Security Firms</li>
+                    <li>• Installers & Maintenance Services</li>
+                    <li>• Medical Practices</li>
+                    <li>• Fashion Brands</li>
+                    <li>• E-learning Platforms</li>
+                    <li>• Logistics & Transport</li>
+                    <li>• Automotive & Mechanics</li>
+                    <li>• Real Estate Agencies</li>
+                    <li>• Law Firms</li>
+                    <li>• Events & Wedding Planners</li>
+                    <li>• Fitness & Wellness Coaches</li>
+                    <li>• Influencers & Creators</li>
+                    <li>• NGOs & Charities</li>
+                    <li>• Restaurants & Cafés</li>
+                    <li>• Tech Startups</li>
+                    <li>• Finance & Crypto</li>
+                    <li>• Agriculture & Farming</li>
+                    <li>• Cleaning Services</li>
+                    <li>• Artists, DJs, Musicians</li>
+                    <li>• Book Authors</li>
+                    <li>• Online Magazines</li>
+                    <li>• Spiritual Teachers</li>
+                    <li>• Photographers & Videographers</li>
+                    <li>• Tattoo Studios</li>
+                    <li>• Gaming & Esports Teams</li>
+                    <li>• Recruitment & HR Firms</li>
+                    <li>• Courier & Delivery Services</li>
+                    <li>• Interior Designers</li>
+                    <li>• Architects & Engineers</li>
+                    <li>• Travel Agencies & Tour Guides</li>
+                    <li>• Food & Beverage Brands</li>
+                    <li>• Education & Training Centers</li>
+                    <li>• App Developers & SaaS Tools</li>
+                    <li>• Wellness Spas & Retreats</li>
+                    <li>• Pet Services & Groomers</li>
+                    <li>• Home Renovation & Landscaping</li>
+                    <li>• Voice Actors & Podcasters</li>
+                    <li>• Drone & Aerial Videography</li>
                 </ul>
 
-                <div style="max-height: 140px; overflow-y: auto; border-top: 1px solid #444; padding-top: 10px;">
-                    <p class="mb-1"><strong>Industries we serve:</strong></p>
-                    <ul class="list-unstyled small mb-0" style="columns: 2;">
-                        <li>• Construction Companies</li>
-                        <li>• Security Firms</li>
-                        <li>• Installers & Maintenance Services</li>
-                        <li>• Medical Practices</li>
-                        <li>• Fashion Brands</li>
-                        <li>• E-learning Platforms</li>
-                        <li>• Logistics & Transport</li>
-                        <li>• Automotive & Mechanics</li>
-                        <li>• Real Estate Agencies</li>
-                        <li>• Law Firms</li>
-                        <li>• Events & Wedding Planners</li>
-                        <li>• Fitness & Wellness Coaches</li>
-                        <li>• Influencers & Creators</li>
-                        <li>• NGOs & Charities</li>
-                        <li>• Restaurants & Cafés</li>
-                        <li>• Tech Startups</li>
-                        <li>• Finance & Crypto</li>
-                        <li>• Agriculture & Farming</li>
-                        <li>• Cleaning Services</li>
-                        <li>• Artists, DJs, Musicians</li>
-                        <li>• Book Authors</li>
-                        <li>• Online Magazines</li>
-                        <li>• Spiritual Teachers</li>
-                        <li>• Photographers & Videographers</li>
-                    </ul>
-                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -487,58 +552,58 @@
             </div>
 
             <div class="row justify-content-center">
-                <!-- Basic Package -->
+                <!-- Tier 1: Static Website -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-box fa-3x mb-3 text-primary"></i>
-                        <h4 class="mb-2">Basic Package</h4>
-                        <p>💲TBD<br>
-                            A solid foundation for any business — clean design, strong structure, and upgrade-ready.
+                        <i class="fas fa-leaf fa-3x mb-3 text-success"></i>
+                        <h4 class="mb-2">Tier 1: Static Website</h4>
+                        <p>💸 Starting at R3,500<br>
+                            Ideal for personal brands, landing pages, or small businesses.
                         </p>
                         <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ E-commerce or service website</li>
-                            <li>✅ Social media links</li>
-                            <li>✅ Language/currency plugin</li>
-                            <li>✅ Mobile responsive & fast</li>
-                            <li>✅ Designed to grow with your brand</li>
+                            <li>✅ Fully responsive, mobile-first</li>
+                            <li>✅ Fast-loading HTML/CSS/JS</li>
+                            <li>✅ SEO-ready & launch support</li>
+                            <li>✅ 1–5 core pages</li>
+                            <li>✅ Optional animations</li>
                         </ul>
-                        <a href="contact.html#contact" class="btn btn-outline-primary">Get Started</a>
+                        <a href="contact.html#contact" class="btn btn-outline-success">Get Started</a>
                     </div>
                 </div>
 
-                <!-- Advanced Package -->
+                <!-- Tier 2: Dynamic Website -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-rocket fa-3x mb-3 text-success"></i>
-                        <h4 class="mb-2">Advanced Package</h4>
-                        <p>💲TBD<br>
-                            Perfect for businesses ready to automate, market, and grow online.
+                        <i class="fas fa-sync-alt fa-3x mb-3 text-primary"></i>
+                        <h4 class="mb-2">Tier 2: Dynamic Website</h4>
+                        <p>💸 Starting at R15,000<br>
+                            For blogs, CMS, or interactive service platforms.
                         </p>
                         <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ Everything in Basic</li>
-                            <li>✅ Partial automation (e.g. auto-posts, syncing)</li>
-                            <li>✅ Meta Business Suite setup</li>
-                            <li>✅ Lead capture forms & integrations</li>
-                            <li>✅ Google & Meta tracking tools</li>
+                            <li>✅ Everything in Tier 1</li>
+                            <li>✅ CMS/database features</li>
+                            <li>✅ Contact forms, dynamic sections</li>
+                            <li>✅ Blog or service listings</li>
+                            <li>✅ Admin dashboard (optional)</li>
                         </ul>
-                        <a href="contact.html#contact" class="btn btn-outline-success">Upgrade Now</a>
+                        <a href="contact.html#contact" class="btn btn-outline-primary">Upgrade to Dynamic</a>
                     </div>
                 </div>
 
-                <!-- Premium Package -->
+                <!-- Tier 3: Advanced / eCommerce / Web App -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
                         <i class="fas fa-gem fa-3x mb-3 text-warning"></i>
-                        <h4 class="mb-2">Premium Package</h4>
-                        <p>💲TBD<br>
-                            Full automation, custom tools, and bulletproof infrastructure for serious businesses.
+                        <h4 class="mb-2">Tier 3: eCommerce / Web App</h4>
+                        <p>💸 Starting at R28,000 (~$1,500)<br>
+                            Ideal for online stores, dashboards, or advanced web apps.
                         </p>
                         <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ Everything in Advanced</li>
-                            <li>✅ Shopify, WordPress, or custom stack automation</li>
-                            <li>✅ Tailored currency & language systems</li>
-                            <li>✅ Advanced marketing funnels</li>
-                            <li>✅ Full testing + optimization</li>
+                            <li>✅ Everything in Tier 2</li>
+                            <li>✅ Full eCommerce (cart, checkout, etc.)</li>
+                            <li>✅ Secure login portals</li>
+                            <li>✅ Multilingual & multi-currency</li>
+                            <li>✅ Web App/PWA functionality</li>
                         </ul>
                         <a href="contact.html#contact" class="btn btn-outline-warning">Go Premium</a>
                     </div>
@@ -548,11 +613,12 @@
             <!-- Maintenance Info -->
             <div class="text-center mt-4">
                 <p>
-                    <strong>Ongoing Maintenance:</strong> $200 - $500/month — includes updates, security checks, integrations, support, and performance improvements.
+                    <strong>Ongoing Maintenance:</strong> R350 – R8,500/month — covers edits, plugin updates, uptime checks, SEO, marketing integrations, and more.
                 </p>
             </div>
         </div>
     </section>
+
 
 
         <!-- IMAGE SCROLLER -->
