--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -544,84 +544,163 @@
     <section id="web-packages" class="py-5">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="section-title glow-blue">Web Development Packages</h2>
-                <p class="lead">
-                    Whether you're a construction company, security firm, doctor, fashion brand, startup, or creator — 
-                    these packages are tailored to fit <strong>any industry</strong>. Scalable, professional, and built to grow.
-                </p>
+            <h2 class="section-title glow-blue">Web Development Packages</h2>
+            <p class="lead">
+                Whether you're a construction company, security firm, doctor, fashion brand, startup, or creator —
+                these packages are tailored to fit <strong>any industry</strong>. Scalable, professional, and built to grow.
+            </p>
             </div>
 
-            <div class="row justify-content-center">
-                <!-- Tier 1: Static Website -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-leaf fa-3x mb-3 text-success"></i>
-                        <h4 class="mb-2">Tier 1: Static Website</h4>
-                        <p>💸 Starting at R3,500<br>
-                            Ideal for personal brands, landing pages, or small businesses.
-                        </p>
-                        <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ Fully responsive, mobile-first</li>
-                            <li>✅ Fast-loading HTML/CSS/JS</li>
-                            <li>✅ SEO-ready & launch support</li>
-                            <li>✅ 1–5 core pages</li>
-                            <li>✅ Optional animations</li>
-                        </ul>
-                        <a href="contact.html#contact" class="btn btn-outline-success">Get Started</a>
-                    </div>
-                </div>
+            <!-- Tier 1 -->
+            <div class="mb-5 package-card tier-1">
+            <h3 class="text-success">🟢 Tier 1: Static Website Package</h3>
+            <p class="tier-subtext">Perfect for landing pages, personal brands, or small businesses who need a fast, beautiful presence online.</p>
+            <ul class="checklist">
+                <li>✅ Fully responsive, mobile-first design</li>
+                <li>✅ Fast-loading, lightweight structure</li>
+                <li>✅ Built with clean HTML/CSS/JS (no backend)</li>
+                <li>✅ SEO-ready meta tags</li>
+                <li>✅ Hosting & launch support</li>
+                <li>✅ Scroll-based animations (optional)</li>
+                <li>✅ 1–5 core pages (Home, About, Services, Contact, etc.)</li>
+            </ul>
 
-                <!-- Tier 2: Dynamic Website -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-sync-alt fa-3x mb-3 text-primary"></i>
-                        <h4 class="mb-2">Tier 2: Dynamic Website</h4>
-                        <p>💸 Starting at R15,000<br>
-                            For blogs, CMS, or interactive service platforms.
-                        </p>
-                        <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ Everything in Tier 1</li>
-                            <li>✅ CMS/database features</li>
-                            <li>✅ Contact forms, dynamic sections</li>
-                            <li>✅ Blog or service listings</li>
-                            <li>✅ Admin dashboard (optional)</li>
-                        </ul>
-                        <a href="contact.html#contact" class="btn btn-outline-primary">Upgrade to Dynamic</a>
-                    </div>
+            <div class="package-options">
+                <div class="package-box">
+                <h4>🔹 Basic Package — R3,500</h4>
+                <ul>
+                    <li>Single scrolling page</li>
+                    <li>Mobile-optimized layout</li>
+                    <li>Contact link or button</li>
+                    <li>Fast turnaround</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R3,500</a>
                 </div>
-
-                <!-- Tier 3: Advanced / eCommerce / Web App -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-gem fa-3x mb-3 text-warning"></i>
-                        <h4 class="mb-2">Tier 3: eCommerce / Web App</h4>
-                        <p>💸 Starting at R28,000 (~$1,500)<br>
-                            Ideal for online stores, dashboards, or advanced web apps.
-                        </p>
-                        <ul class="list-unstyled small mb-3 text-start">
-                            <li>✅ Everything in Tier 2</li>
-                            <li>✅ Full eCommerce (cart, checkout, etc.)</li>
-                            <li>✅ Secure login portals</li>
-                            <li>✅ Multilingual & multi-currency</li>
-                            <li>✅ Web App/PWA functionality</li>
-                        </ul>
-                        <a href="contact.html#contact" class="btn btn-outline-warning">Go Premium</a>
-                    </div>
+                <div class="package-box">
+                <h4>🔸 Standard Package — R7,500</h4>
+                <ul>
+                    <li>Up to 4 individual pages</li>
+                    <li>Simple navigation menu</li>
+                    <li>Optimized layout for services/about/contact</li>
+                    <li>Basic animations</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Standard – R7,500</a>
+                </div>
+                <div class="package-box">
+                <h4>🔺 Pro Package — R15,000</h4>
+                <ul>
+                    <li>5+ pages</li>
+                    <li>Includes styled contact form</li>
+                    <li>Extra UI details (hover states, transitions)</li>
+                    <li>Custom layout options</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-danger mt-2">Get Pro – R15,000</a>
                 </div>
             </div>
+            <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R350 – R750/month (Optional)<br>Includes edits, updates, hosting checks, bug fixes, and light SEO.</p>
+            </div>
 
-            <!-- Maintenance Info -->
-            <div class="text-center mt-4">
-                <p>
-                    <strong>Ongoing Maintenance:</strong> R350 – R8,500/month — covers edits, plugin updates, uptime checks, SEO, marketing integrations, and more.
-                </p>
+            <!-- Tier 2 -->
+            <div class="mb-5 package-card tier-2">
+            <h3 class="text-warning">🟡 Tier 2: Dynamic Website Package</h3>
+            <p class="tier-subtext">For businesses needing content management, blogs, or more interactive, editable features.</p>
+            <ul class="checklist">
+                <li>✅ Everything in Tier 1</li>
+                <li>✅ Contact form with smart logic</li>
+                <li>✅ SEO-optimized meta tags</li>
+                <li>✅ Social media integration</li>
+                <li>✅ Dynamic content (blog, updates, service listings)</li>
+                <li>✅ CMS or basic database (e.g. blog posts, products, services)</li>
+                <li>✅ Custom animations & JavaScript enhancements</li>
+                <li>✅ Admin panel or dashboard (optional)</li>
+            </ul>
+
+            <div class="package-options">
+                <div class="package-box">
+                <h4>🔹 Basic Package — ~R15,000</h4>
+                <ul>
+                    <li>All Tier 1 features</li>
+                    <li>Dynamic sections like blog/services</li>
+                    <li>Contact form integration</li>
+                    <li>CMS included (WordPress, Sanity, etc.)</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R15,000</a>
+                </div>
+                <div class="package-box">
+                <h4>🔸 Standard Package — ~R17,500</h4>
+                <ul>
+                    <li>Everything in Basic</li>
+                    <li>Custom UI/UX enhancements</li>
+                    <li>Scroll/hover animations</li>
+                    <li>JavaScript-based interactions</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Standard – R17,500</a>
+                </div>
+                <div class="package-box">
+                <h4>🔺 Pro Package — ~R20,000+</h4>
+                <ul>
+                    <li>Everything in Standard</li>
+                    <li>Advanced animations and logic</li>
+                    <li>API integrations (Instagram feeds, CRMs, etc.)</li>
+                    <li>Custom features within CMS</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-danger mt-2">Get Pro – R20,000+</a>
+                </div>
+            </div>
+            <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R750 – R1,500/month<br>Includes backups, CMS updates, SEO checks, uptime monitoring, and tech support.</p>
+            </div>
+
+            <!-- Tier 3 -->
+            <div class="mb-5 package-card tier-3">
+            <h3 class="text-primary">🔵 Tier 3: Advanced Website / eCommerce / Web App</h3>
+            <p class="tier-subtext">For online stores, booking platforms, or powerful web apps needing custom logic and automation.</p>
+            <ul class="checklist">
+                <li>✅ Includes everything from Tier 2</li>
+                <li>✅ Full eCommerce functionality (cart, checkout, payments)</li>
+                <li>✅ Secure login portals / dashboards</li>
+                <li>✅ PWA/Web App behavior (mobile-friendly, fast)</li>
+                <li>✅ Inventory or user management systems</li>
+                <li>✅ Multilingual & multi-currency support</li>
+            </ul>
+
+            <div class="package-options">
+                <div class="package-box">
+                <h4>🔹 Basic Package — ~R28,000–R45,000</h4>
+                <ul>
+                    <li>Standard eCommerce features</li>
+                    <li>Plugin-based language/currency switcher</li>
+                    <li>Scalable & future-proofed for growth</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R28k–R45k</a>
+                </div>
+                <div class="package-box">
+                <h4>🔸 Advanced Package — ~R65,000+</h4>
+                <ul>
+                    <li>Everything in Basic</li>
+                    <li>Partial automation (stock sync, basic marketing tools)</li>
+                    <li>Analytics + pixel tracking setup</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Advanced – R65,000+</a>
+                </div>
+                <div class="package-box">
+                <h4>🔺 Premium Package — ~R95,000+</h4>
+                <ul>
+                    <li>Everything in Advanced</li>
+                    <li>Custom language & currency systems</li>
+                    <li>Extensive testing, speed & UX optimization</li>
+                    <li>Full platform automation</li>
+                </ul>
+                <a href="#contact" class="btn btn-outline-glass text-danger">Get Premium – R95,000+</a>
+                </div>
+            </div>
+            <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R3,800 – R9,500/month<br>Includes updates, automation monitoring, uptime tracking, and priority support.</p>
             </div>
         </div>
     </section>
 
 
 
-        <!-- IMAGE SCROLLER -->
+    <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
         <!-- CAROUSEL SCROLLER -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
