--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -364,7 +364,7 @@
             💻 Every pixel we place is a promise — performance, power, and perfection.
             </p>
 
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-blue">Bring My Vision to Life</a>
+            <a href="contact.htmlcontact.html#contact" class="btn btn-light mt-3 feature-box glow-blue">Bring My Vision to Life</a>
         </div>
     </section>
 
@@ -574,7 +574,7 @@
                     <li>Contact link or button</li>
                     <li>Fast turnaround</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R3,500</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R3,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Standard Package — R7,500</h4>
@@ -584,7 +584,7 @@
                     <li>Optimized layout for services/about/contact</li>
                     <li>Basic animations</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Standard – R7,500</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Standard – R7,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Pro Package — R15,000</h4>
@@ -594,7 +594,7 @@
                     <li>Extra UI details (hover states, transitions)</li>
                     <li>Custom layout options</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-danger mt-2">Get Pro – R15,000</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-danger mt-2 feature-box">Get Pro – R15,000</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R350 – R750/month (Optional)<br>Includes edits, updates, hosting checks, bug fixes, and light SEO.</p>
@@ -624,7 +624,7 @@
                     <li>Contact form integration</li>
                     <li>CMS included (WordPress, Sanity, etc.)</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R15,000</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R15,000</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Standard Package — ~R17,500</h4>
@@ -634,7 +634,7 @@
                     <li>Scroll/hover animations</li>
                     <li>JavaScript-based interactions</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Standard – R17,500</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Standard – R17,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Pro Package — ~R20,000+</h4>
@@ -644,7 +644,7 @@
                     <li>API integrations (Instagram feeds, CRMs, etc.)</li>
                     <li>Custom features within CMS</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-danger mt-2">Get Pro – R20,000+</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-danger mt-2 feature-box">Get Pro – R20,000+</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R750 – R1,500/month<br>Includes backups, CMS updates, SEO checks, uptime monitoring, and tech support.</p>
@@ -671,7 +671,7 @@
                     <li>Plugin-based language/currency switcher</li>
                     <li>Scalable & future-proofed for growth</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-success mt-2">Get Basic – R28k–R45k</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R28k–R45k</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Advanced Package — ~R65,000+</h4>
@@ -680,7 +680,7 @@
                     <li>Partial automation (stock sync, basic marketing tools)</li>
                     <li>Analytics + pixel tracking setup</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-warning mt-2">Get Advanced – R65,000+</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Advanced – R65,000+</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Premium Package — ~R95,000+</h4>
@@ -690,7 +690,7 @@
                     <li>Extensive testing, speed & UX optimization</li>
                     <li>Full platform automation</li>
                 </ul>
-                <a href="#contact" class="btn btn-outline-glass text-danger">Get Premium – R95,000+</a>
+                <a href="contact.html#contact" class="btn btn-outline-glass text-danger feature-box">Get Premium – R95,000+</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R3,800 – R9,500/month<br>Includes updates, automation monitoring, uptime tracking, and priority support.</p>
