--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -553,8 +553,8 @@
 
             <!-- Tier 1 -->
             <div class="mb-5 package-card tier-1">
-            <h3 class="text-success">🟢 Tier 1: Static Website Package</h3>
-            <p class="tier-subtext">Perfect for landing pages, personal brands, or small businesses who need a fast, beautiful presence online.</p>
+            <h3 class="glow-green">🟢 Tier 1: Static Website Package</h3>
+            <p class="tier-subtext glow-green">Perfect for landing pages, personal brands, or small businesses who need a fast, beautiful presence online.</p>
             <ul class="checklist">
                 <li>✅ Fully responsive, mobile-first design</li>
                 <li>✅ Fast-loading, lightweight structure</li>
@@ -574,7 +574,7 @@
                     <li>Contact link or button</li>
                     <li>Fast turnaround</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R3,500</a>
+                <a href="contact.html#contact" class="btn-glass btn-green mt-2 feature-box">Get Basic – R3,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Standard Package — R7,500</h4>
@@ -584,7 +584,7 @@
                     <li>Optimized layout for services/about/contact</li>
                     <li>Basic animations</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Standard – R7,500</a>
+                <a href="contact.html#contact" class="btn-glass btn-yellow mt-2 feature-box">Get Standard – R7,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Pro Package — R15,000</h4>
@@ -594,7 +594,7 @@
                     <li>Extra UI details (hover states, transitions)</li>
                     <li>Custom layout options</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-danger mt-2 feature-box">Get Pro – R15,000</a>
+                <a href="contact.html#contact" class="btn-glass btn-red mt-2 feature-box">Get Pro – R15,000</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R350 – R750/month (Optional)<br>Includes edits, updates, hosting checks, bug fixes, and light SEO.</p>
@@ -602,8 +602,8 @@
 
             <!-- Tier 2 -->
             <div class="mb-5 package-card tier-2">
-            <h3 class="text-warning">🟡 Tier 2: Dynamic Website Package</h3>
-            <p class="tier-subtext">For businesses needing content management, blogs, or more interactive, editable features.</p>
+            <h3 class="glow-gold">🟡 Tier 2: Dynamic Website Package</h3>
+            <p class="tier-subtext glow-gold">For businesses needing content management, blogs, or more interactive, editable features.</p>
             <ul class="checklist">
                 <li>✅ Everything in Tier 1</li>
                 <li>✅ Contact form with smart logic</li>
@@ -624,7 +624,7 @@
                     <li>Contact form integration</li>
                     <li>CMS included (WordPress, Sanity, etc.)</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R15,000</a>
+                <a href="contact.html#contact" class="btn-glass btn-green mt-2 feature-box">Get Basic – R15,000</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Standard Package — ~R17,500</h4>
@@ -634,7 +634,7 @@
                     <li>Scroll/hover animations</li>
                     <li>JavaScript-based interactions</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Standard – R17,500</a>
+                <a href="contact.html#contact" class="btn-glass btn-yellow mt-2 feature-box">Get Standard – R17,500</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Pro Package — ~R20,000+</h4>
@@ -644,7 +644,7 @@
                     <li>API integrations (Instagram feeds, CRMs, etc.)</li>
                     <li>Custom features within CMS</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-danger mt-2 feature-box">Get Pro – R20,000+</a>
+                <a href="contact.html#contact" class="btn-glass btn-red mt-2 feature-box">Get Pro – R20,000+</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R750 – R1,500/month<br>Includes backups, CMS updates, SEO checks, uptime monitoring, and tech support.</p>
@@ -652,8 +652,8 @@
 
             <!-- Tier 3 -->
             <div class="mb-5 package-card tier-3">
-            <h3 class="text-primary">🔵 Tier 3: Advanced Website / eCommerce / Web App</h3>
-            <p class="tier-subtext">For online stores, booking platforms, or powerful web apps needing custom logic and automation.</p>
+            <h3 class="glow-blue">🔵 Tier 3: Advanced Website / eCommerce / Web App</h3>
+            <p class="tier-subtext glow-blue">For online stores, booking platforms, or powerful web apps needing custom logic and automation.</p>
             <ul class="checklist">
                 <li>✅ Includes everything from Tier 2</li>
                 <li>✅ Full eCommerce functionality (cart, checkout, payments)</li>
@@ -671,7 +671,7 @@
                     <li>Plugin-based language/currency switcher</li>
                     <li>Scalable & future-proofed for growth</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-success mt-2 feature-box">Get Basic – R28k–R45k</a>
+                <a href="contact.html#contact" class="btn-glass btn-green mt-2 feature-box">Get Basic – R28k–R45k</a>
                 </div>
                 <div class="package-box">
                 <h4>🔸 Advanced Package — ~R65,000+</h4>
@@ -680,7 +680,7 @@
                     <li>Partial automation (stock sync, basic marketing tools)</li>
                     <li>Analytics + pixel tracking setup</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-warning mt-2 feature-box">Get Advanced – R65,000+</a>
+                <a href="contact.html#contact" class="btn-glass btn-yellow mt-2 feature-box">Get Advanced – R65,000+</a>
                 </div>
                 <div class="package-box">
                 <h4>🔺 Premium Package — ~R95,000+</h4>
@@ -690,7 +690,7 @@
                     <li>Extensive testing, speed & UX optimization</li>
                     <li>Full platform automation</li>
                 </ul>
-                <a href="contact.html#contact" class="btn btn-outline-glass text-danger feature-box">Get Premium – R95,000+</a>
+                <a href="contact.html#contact" class="btn-glass btn-red mt-2 feature-box">Get Premium – R95,000+</a>
                 </div>
             </div>
             <p class="maintenance mt-3"><strong>🔧 Ongoing Maintenance:</strong><br>R3,800 – R9,500/month<br>Includes updates, automation monitoring, uptime tracking, and priority support.</p>
